--- a/Content/Site.less
+++ b/Content/Site.less
@@ -136,6 +136,15 @@ textarea {
 	opacity: .5;
 }
 
+///////////
+// Kendo //
+///////////
+.k-grid  .k-grid-header  .k-header  .k-link {
+    height: auto;
+}
+.k-grid  .k-grid-header  .k-header {
+    white-space: normal;
+}
 
 ///////////
 // Modal //
