--- a/Content/less/lt/bootstrap-mods.less
+++ b/Content/less/lt/bootstrap-mods.less
@@ -46,7 +46,9 @@
 	label {
 		padding-left: 0;
 		input[type=checkbox] {
-			display: none;
+			// display: none;
+			margin-left: 0;
+			.opacity(0);
 			+ .checkbox-i {
 				display: inline-block;
 				width: 14px;
